@@ -1,3 +1,10 @@
+2013-06-11 Graeme Stewart <graeme.andrew.stewart@cern.ch>
+	- Patches from Zachary Marshall
+	* Configuration.py Add "AddNTUP_SUSYTRUTH" NTUP type
+	* skeleton.AODtoDPD_trf.py New handling for NTUP_SUSYTRUTH
+	* Reco_trf.py Add NTUP_SUSYTRUTH to LODPK
+	* MergeNTUP_trf.py Add NTUP_SUSYTRUTH to LODPK
+
 2013-05-29 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
 	* Added the capability in ESDtoDPD and AODtoDPD jobs to specify
 	  pre/post-include scripts in the jobProperties of the DPD
